--- a/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/dash.xhtml
+++ b/showcase/modules/web-showcase/src/main/webapp/pages/consumer/aggr/dash.xhtml
@@ -12,6 +12,15 @@
         </f:metadata>-->
 
     <ui:define name="content">
+        <h:outputScript library="yodlee" name="js/oauth.js" />
+        <h:outputScript library="yodlee" name="js/sha1.js" />
+        <h:outputScript library="yodlee" name="js/jquery.colorbox.js" />
+
+        <h:outputStylesheet library="yodlee" name="css/colorbox.css" />
+        <h:outputStylesheet library="yodlee" name="css/main.css" />
+
+        <h:outputScript library="yodlee" name="js/yodleeCommon.js" />
+
         <h:outputScript name="js/ydlCharts.js" library="yodlee"/>
 
         <h:form id="dform">
