--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -17,16 +17,19 @@
 
                 <div class="EmptyBox5"></div>
                 <p:inputText styleClass="CustomWidthFA FS14 InputMergeRight"
+                maxlength="20"
                              value="#{tdcto.tdMasterData.acctOwnersDetail.firstName}"
                              placeholder="First Name" required="false">
                 </p:inputText>
                 <p:inputText
                         styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
                         value="#{tdcto.tdMasterData.acctOwnersDetail.midInitial}"
+                        maxlength="1"
                         placeholder="Middle Initial">
                 </p:inputText>
                 <p:inputText styleClass="CustomWidthFA FS14 InputMergeLeft"
                              value="#{tdcto.tdMasterData.acctOwnersDetail.lastName}"
+                             maxlength="30"
                              placeholder="Last Name" required="false">
                 </p:inputText>
             </div>
@@ -40,6 +43,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid85 FS14 CustomWidthFA-Responsive"
                                  value="#{tdcto.tdMasterData.acctOwnersDetail.dob}"
+                                 maxlength="30"
                                  mask="99/99/9999" placeholder="MM/DD/YYYY" required="false">
                     </p:inputMask>
                 </div>
@@ -48,7 +52,7 @@
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;">Social
                         Security Number</label>
-
+maxlength="90"
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid85 FS14 CustomWidthFA-Responsive"
                                  value="#{tdcto.tdMasterData.acctOwnersDetail.ssn}"
@@ -84,6 +88,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
                                  value="#{tdcto.tdMasterData.acctOwnersDetail.phoneNumber}"
+                                 maxlength="15"
                                  mask="(999) 999-9999" placeholder="Primary Phone" required="false">
                     </p:inputMask>
                 </div>
@@ -95,6 +100,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
                                  value="#{tdcto.tdMasterData.acctOwnersDetail.emailAddress}"
+                                 maxlength="50"
                                  placeholder="Email Address"
                                  required="false">
                     </p:inputMask>
@@ -127,15 +133,18 @@
                 <div class="EmptyBox5"></div>
                 <p:inputText styleClass="CustomWidthFA FS14 InputMergeRight"
                              value="#{tdcto.tdMasterData.jointAcctOwnersDetail.firstName}"
+                             maxlength="20"
                              placeholder="First Name" required="false">
                 </p:inputText>
                 <p:inputText
                         styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
                         value="#{tdcto.tdMasterData.jointAcctOwnersDetail.midInitial}"
+                        maxlength="1"
                         placeholder="Middle Initial">
                 </p:inputText>
                 <p:inputText styleClass="CustomWidthFA FS14 InputMergeLeft"
                              value="#{tdcto.tdMasterData.jointAcctOwnersDetail.lastName}"
+                             maxlength="30"
                              placeholder="Last Name" required="false">
                 </p:inputText>
             </div>
@@ -149,6 +158,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid85 FS14 CustomWidthFA-Responsive"
                                  value="#{tdcto.tdMasterData.jointAcctOwnersDetail.dob}"
+                                 maxlength="30"
                                  mask="99/99/9999" placeholder="MM/DD/YYYY" required="false">
                     </p:inputMask>
                 </div>
@@ -161,6 +171,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid85 FS14 CustomWidthFA-Responsive"
                                  value="#{tdcto.tdMasterData.jointAcctOwnersDetail.ssn}"
+                                 maxlength="90"
                                  mask="999-99-9999" placeholder="###-##-####" required="false">
                     </p:inputMask>
                 </div>
@@ -193,6 +204,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
                                  value="#{tdcto.tdMasterData.jointAcctOwnersDetail.phoneNumber}"
+                                 maxlength="15"
                                  mask="(999) 999-9999" placeholder="Primary Phone" required="false">
                     </p:inputMask>
                 </div>
@@ -203,6 +215,7 @@
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
                                  value="#{tdcto.tdMasterData.jointAcctOwnersDetail.emailAddress}"
+                                 maxlength="50"
                                  placeholder="Email Address"
                                  required="false">
                     </p:inputMask>
