--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -10,7 +10,7 @@
         <p:tab title="Fund">
             <p:panel id="fundPanel" style="border: 0px; background: transparent">
                 <div class="Container100">
-                    <div class="Container80 Responsive90 MarTop5 MarCenter ui-color"
+                    <div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
                          style="margin-bottom: 15px; border: 0px; background: transparent">
                         <div class="Container100 CustomWidthFA2 MarTop5">
                             <p:selectBooleanCheckbox
@@ -37,7 +37,7 @@
                 <div class="Container100">
                     <p:panel id="fundPanel2" style="border: 0px; background: transparent"
                              rendered="#{tdcto.tdMasterData.fundNow}">
-                        <div class="Container80 Responsive90 MarTop5 MarCenter ui-color"
+                        <div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
                              style="margin-bottom: 15px; border: 0px; background: transparent">
 
                             <p:selectOneRadio id="fundRadio"
@@ -431,7 +431,7 @@
         <p:tab title="Recurring" rendered="#{tdcto.tdMasterData.recurringFlag}">
             <p:panel id="recurrringPanel" styleClass="Container100"
                      style="border: 0px; background: transparent">
-                <div class="Container80 Responsive90 MarTop5 MarCenter ui-color"
+                <div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
                      style="margin-bottom: 15px; border: 0px; background: transparent">
 
 
@@ -476,7 +476,16 @@
                                     <f:selectItem itemValue="WEEKLY" itemLabel="Weekly "/>
                                 </p:selectOneMenu>
                             </div>
+ <div class="Container45 Fright CustomWidthFA-Responsive">
+                                <label Class="Container100"
+                                       style="text-align: left !important; font-weight: bold !important;">Bank Account Title <span class="Fs12">(Please provide full title of the account)</span></label>
 
+                                <div class="EmptyBox5"></div>
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                             value=""
+                                             placeholder="Bank Account Title">
+                                </p:inputText>
+                            </div>
                         </div>
 
                         <div class="EmptyBox20"></div>
